force-app/main/default/objects/Contact/fields/Korean_Name__c.field-meta.xml
<CustomField>
    <fullName>Korean_Name__c</fullName>
    <label>Korean Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>