force-app/main/default/objects/Contact/fields/Primary_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Doctor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The record type for the Primary Care Physician (PCP) must be set as ‘Vendor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>