force-app/main/default/objects/Contact/fields/Primaryholder__c.field-meta.xml
<CustomField>
    <fullName>Primaryholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primaryholder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The primary policyholder is not permitted to select its Primary Holder.</errorMessage>
        <filterItems>
            <field>$Source.Is_Primaryholder__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Household Members</relationshipLabel>
    <relationshipName>Household_Members</relationshipName>
    <type>Lookup</type>
</CustomField>