force-app/main/default/objects/Contact/fields/Sub_Email__c.field-meta.xml
<CustomField>
    <fullName>Sub_Email__c</fullName>
    <description>Stores an alternative or secondary email address for the contact.</description>
    <inlineHelpText>Enter a secondary email address for this contact, such as a personal or backup email. This field is used when the primary email is unavailable or for specific communications.</inlineHelpText>
    <label>Sub Email</label>
    <type>Email</type>
</CustomField>