force-app/main/default/objects/Contact/validationRules/SSN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Validation_Rule</fullName>
    <active>true</active>
    <description>SSN must be in the format XXX-XX-XXXX (e.g., 123-45-6789).</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(SSN__c)),
    NOT(REGEX(SSN__c, &quot;^[0-9]{3}-[0-9]{2}-[0-9]{4}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>SN must be in the format XXX-XX-XXXX
(e.g., 123-45-6789)</errorMessage>
</ValidationRule>