force-app/main/default/objects/Contact/listViews/Agent_clients.listView-meta.xml
<ListView>
    <fullName>Agent_clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent__c</field>
        <operation>contains</operation>
    </filters>
    <label>Agent_clients</label>
</ListView>