force-app/main/default/objects/Contact/listViews/Agents.listView-meta.xml
<ListView>
    <fullName>Agents</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Agents</label>
</ListView>