force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Age__c</columns>
    <columns>Agent__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>