force-app/main/default/objects/Contact/listViews/Client.listView-meta.xml
<ListView>
    <fullName>Client</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Client</label>
</ListView>