force-app/main/default/objects/Contact/listViews/TX_Contants.listView-meta.xml
<ListView>
    <fullName>TX_Contants</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>TX Contants</label>
</ListView>